Complete 07-questions (was difficult)

--- a/07-questions/setup/styles.css
+++ b/07-questions/setup/styles.css
@@ -204,7 +204,7 @@ Questions
   display: flex;
   justify-content: space-between;
   align-items: center;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   padding-bottom: 1rem;
 }
 .question-title p {
@@ -231,7 +231,7 @@ Questions
   margin-bottom: 0;
 }
 /* hide text */
-/* .question-text {
+.question-text {
   display: none;
 }
 .show-text .question-text {
@@ -245,4 +245,4 @@ Questions
 }
 .show-text .plus-icon {
   display: none;
-} */
+}
