--- a/15-slider/setup/styles.css
+++ b/15-slider/setup/styles.css
@@ -205,7 +205,7 @@ Slider
 }
 .slide-img {
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .slide h1 {
   font-size: 5rem;
@@ -232,8 +232,8 @@ Slider
   justify-content: center;
   margin-top: 0.75rem;
 }
-.prevBtn,
-.nextBtn {
+.prev-btn,
+.next-btn {
   background: transparent;
   border-color: transparent;
   font-size: 1.75rem;
@@ -244,8 +244,8 @@ Slider
   color: var(--clr-grey-5);
   transition: var(--transition);
 }
-.prevBtn:hover,
-.nextBtn:hover {
+.prev-btn:hover,
+.next-btn:hover {
   color: var(--clr-grey-3);
 }
 
